syntax = "proto3";
package xion.zk.v1;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/burnt-labs/xion/x/zk/types";

// Query provides defines the gRPC querier service.
service Query {
  // ProofVerify verifies a zk proof for email authentication.
  rpc ProofVerify(QueryVerifyRequest) returns (ProofVerifyResponse) {
    option (google.api.http).get = "/zk/v1/verify";
  }
}

// SnarkJsProof represents a ZK-SNARK proof in SnarkJS format.
message SnarkJsProof {
  // pi_a defines the first component of the proof.
  repeated bytes pi_a = 1;
  // pi_b defines the second component of the proof.
  repeated bytes pi_b = 2;
  // pi_c defines the third component of the proof.
  repeated bytes pi_c = 3;
}

message QueryVerifyRequest {
  bytes proof = 1;
  repeated string public_inputs = 2;
  bytes vkey = 3;
}
// ProofVerifyResponse defines the response structure for proof verification.
message ProofVerifyResponse {
  // verified indicates whether the proof verification was successful.
  bool verified = 1;
}
